--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <header class="navbar navbar-sticky navbar-expand-lg navbar-dark">
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
-                    <img class="navbar-brand-regular" src="assets/img/logo/logo-white.png" alt="brand-logo">
-                    <img class="navbar-brand-sticky" src="assets/img/logo/logo-homi.svg" alt="sticky brand-logo">
+                    <img class="navbar-brand-regular" style=" width: 130px;" src="assets/img/logo/logo-homi-white.png" alt="brand-logo">
+                    <img class="navbar-brand-sticky" style=" width: 130px;" src="assets/img/logo/logo-homi.png" alt="sticky brand-logo">
                 </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
