--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                             <!-- Contact Form -->
                             <form id="contact-form">
                                 <div class="contact-top">
-                                    <h3 class="contact-title">Get started for FREE!</h3>
-                                    <h5 class="text-secondary fw-3 py-3">Fill all fields so we can get some info about you. We'll never send you spam</h5>
+                                    <h3 class="contact-title">Vite, inscris-toi !</h3>
+                                    <!-- <h5 class="text-secondary fw-3 py-3">Fill all fields so we can get some info about you. We'll never send you spam</h5> -->
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
@@ -94,7 +94,7 @@
                                         </div>
                                     </div>
                                     <div class="col-12">
-                                        <button class="btn btn-bordered w-100 mt-3 mt-sm-4" type="submit">Send Message</button>
+                                        <button class="btn btn-bordered w-100 mt-3 mt-sm-4" type="submit">Je m'inscris maintenant</button>
                                         <div class="contact-bottom">
                                             <span class="d-inline-block mt-3">By signing up, you accept our <a href="#">Terms</a> &amp; <a href="#">Privacy Policy</a></span>
                                         </div>
