--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             <form id="contact-form">
                                 <div class="contact-top">
                                     <h3 class="contact-title">Vite, inscris-toi !</h3>
-                                    <!-- <h5 class="text-secondary fw-3 py-3">Fill all fields so we can get some info about you. We'll never send you spam</h5> -->
+                                    <h5 style="font-size: 16px;" class="text-secondary fw-3 py-3">Remplis le formulaire avec des informations correctes sur toi STP. Nous ne t'enverrons jamais de spam</h5>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
@@ -96,7 +96,7 @@
                                     <div class="col-12">
                                         <button class="btn btn-bordered w-100 mt-3 mt-sm-4" type="submit">Je m'inscris maintenant</button>
                                         <div class="contact-bottom">
-                                            <span class="d-inline-block mt-3">By signing up, you accept our <a href="#">Terms</a> &amp; <a href="#">Privacy Policy</a></span>
+                                            <span class="d-inline-block mt-3">En t'inscrivant, tu acceptes nos <a href="#">CGU</a> &amp; notre <a href="#">politique de confidentialité</a></span>
                                         </div>
                                     </div>
                                 </div>
