little UI updates

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     <!-- Welcome Intro Start -->
                     <div class="col-12 col-lg-7">
                         <div class="welcome-intro">
-                            <h1 class="text-white" style="font-size: 3em;">Découvre comment gagner de l'argent depuis chez toi grâce à HOMI</h1>
-                            <p class="text-white my-4">Remplis le formulaire et reçois gratuitement toutes les astuces pour dénicher un bien potentiellement vendable par notre équipe.</p>
+                            <h1 class="text-white" style="font-size: 3em;">Ta curiosité vaut de l'or ! Des biens à vendre autour de chez toi ?</h1>
+                            <p class="text-white my-4">Remplis le formulaire et découvre comment gagner un minimum de 400 € grâce à HOMI.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
-                                <a href="#" class="btn sApp-btn text-uppercase">Je découvre</a>
+                                <a target="_blank" href="https://homi.immo/comment-ca-marche/" class="btn sApp-btn text-uppercase">Je découvre</a>
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                             <form id="contact-form">
                                 <div class="contact-top">
                                     <h3 class="contact-title">Vite, inscris-toi !</h3>
-                                    <h5 style="font-size: 16px;" class="text-secondary fw-3 py-3">Remplis le formulaire avec des informations correctes sur toi STP. Nous ne t'enverrons jamais de spam</h5>
+                                    <h5 style="font-size: 16px;" class="text-secondary fw-3 py-3">Mets toutes les chances de ton côté en remplissant ce formulaire.</h5>
                                 </div>
                                 <div class="row">
                                     <div class="col-12">
