little UI updates

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="col-12 col-lg-7">
                         <div class="welcome-intro">
                             <h1 class="text-white" style="font-size: 3em;">Ta curiosité vaut de l'or ! Des biens à vendre autour de chez toi ?</h1>
-                            <p class="text-white my-4">Remplis le formulaire et découvre comment gagner un minimum de 400 € grâce à HOMI.</p>
+                            <p class="text-white my-4">Remplis le formulaire et découvre comment gagner un minimum de <strong style="color: #111;">400€</strong> grâce à HOMI.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
                                 <a target="_blank" href="https://homi.immo/comment-ca-marche/" class="btn sApp-btn text-uppercase">Je découvre</a>
