huge UI updates

--- a/index.html
+++ b/index.html
@@ -116,123 +116,16 @@
                     <div class="col-12 col-md-10 col-lg-8">
                         <!-- Section Heading -->
                         <div class="section-heading text-center">
-                            <h2 class="text-capitalize">Our Team Experts</h2>
-                            <p class="d-none d-sm-block mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati dignissimos quae quo ad iste ipsum officiis deleniti asperiores sit.</p>
-                            <p class="d-block d-sm-none mt-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum obcaecati.</p>
+                            <h2 class="text-capitalize">Rejoins notre communauté</h2>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                        <!-- Single Team -->
-                        <div class="single-team text-center overflow-hidden m-2 m-lg-0">
-                            <!-- Team Thumb -->
-                            <div class="team-thumb d-inline-block position-relative overflow-hidden">
-                                <img src="assets/img/avatar/avatar-1.png" alt="">
-                                <!-- Team Overlay -->
-                                <div class="team-overlay">
-                                    <h4 class="team-name text-white">Junaid Hasan</h4>
-                                    <h6 class="team-post text-white mt-2 mb-3">Founder &amp; CEO</h6>
-                                    <!-- Team Icons -->
-                                    <div class="team-icons">
-                                        <a class="p-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-google-plus-g"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                        <!-- Single Team -->
-                        <div class="single-team text-center overflow-hidden m-2 m-lg-0">
-                            <!-- Team Thumb -->
-                            <div class="team-thumb d-inline-block position-relative overflow-hidden">
-                                <img src="assets/img/avatar/avatar-2.png" alt="">
-                                <!-- Team Overlay -->
-                                <div class="team-overlay">
-                                    <h4 class="team-name text-white">Jassica William</h4>
-                                    <h6 class="team-post text-white mt-2 mb-3">Co-Founder</h6>
-                                    <!-- Team Icons -->
-                                    <div class="team-icons">
-                                        <a class="p-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-google-plus-g"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                        <!-- Single Team -->
-                        <div class="single-team text-center overflow-hidden m-2 m-lg-0">
-                            <!-- Team Thumb -->
-                            <div class="team-thumb d-inline-block position-relative overflow-hidden">
-                                <img src="assets/img/avatar/avatar-3.png" alt="">
-                                <!-- Team Overlay -->
-                                <div class="team-overlay">
-                                    <h4 class="team-name text-white">Md. Arham</h4>
-                                    <h6 class="team-post text-white mt-2 mb-3">Web Developer</h6>
-                                    <!-- Team Icons -->
-                                    <div class="team-icons">
-                                        <a class="p-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-google-plus-g"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                        <!-- Single Team -->
-                        <div class="single-team text-center overflow-hidden m-2 m-lg-0">
-                            <!-- Team Thumb -->
-                            <div class="team-thumb d-inline-block position-relative overflow-hidden">
-                                <img src="assets/img/avatar/avatar-4.png" alt="">
-                                <!-- Team Overlay -->
-                                <div class="team-overlay">
-                                    <h4 class="team-name text-white">Yasmin Akter</h4>
-                                    <h6 class="team-post text-white mt-2 mb-3">Graphic Designer</h6>
-                                    <!-- Team Icons -->
-                                    <div class="team-icons">
-                                        <a class="p-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-twitter"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-google-plus-g"></i></a>
-                                        <a class="p-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <img class="join-us" src="assets/img/bg/join-our-community.jpg" alt="">
                 </div>
             </div>
         </section>
         <!-- ***** Team Area End ***** -->
-
-        <!-- ***** Subscribe Area Start ***** -->
-        <section class="section subscribe-area ptb_100">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-12 col-md-10 col-lg-8">
-                        <div class="subscribe-content text-center">
-                            <h2>Subscribe to get updates</h2>
-                            <p class="my-4">By subscribing you will get newsleter, promotions adipisicing elit. Architecto beatae, asperiores tempore repudiandae saepe aspernatur unde voluptate sapiente quia ex.</p>
-                            <!-- Subscribe Form -->
-                            <form class="subscribe-form">
-                                <div class="form-group">
-                                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email">
-                                </div>
-                                <button type="submit" class="btn btn-lg btn-block">Subscribe</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- ***** Subscribe Area End ***** -->
 
         <!--====== Height Emulator Area Start ======-->
         <div class="height-emulator d-none d-lg-block"></div>
@@ -262,13 +155,9 @@
                                         <i class="fab fa-twitter"></i>
                                         <i class="fab fa-twitter"></i>
                                     </a>
-                                    <a class="google-plus" href="#">
-                                        <i class="fab fa-google-plus-g"></i>
-                                        <i class="fab fa-google-plus-g"></i>
-                                    </a>
-                                    <a class="vine" href="#">
-                                        <i class="fab fa-vine"></i>
-                                        <i class="fab fa-vine"></i>
+                                    <a class="linkedin" href="#">
+                                        <i class="fab fa-linkedin"></i>
+                                        <i class="fab fa-linkedin"></i>
                                     </a>
                                 </div>
                             </div>
