--- a/index.html
+++ b/index.html
@@ -147,15 +147,11 @@
                                 <p class="mt-2 mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis non, fugit totam vel laboriosam vitae.</p>
                                 <!-- Social Icons -->
                                 <div class="social-icons d-flex">
-                                    <a class="facebook" href="#">
+                                    <a class="facebook" target="_blank" href="https://www.facebook.com/homi.immo/">
                                         <i class="fab fa-facebook-f"></i>
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
-                                    <a class="twitter" href="#">
-                                        <i class="fab fa-twitter"></i>
-                                        <i class="fab fa-twitter"></i>
-                                    </a>
-                                    <a class="linkedin" href="#">
+                                    <a class="linkedin" href="https://www.linkedin.com/company/homi.immo/">
                                         <i class="fab fa-linkedin"></i>
                                         <i class="fab fa-linkedin"></i>
                                     </a>
@@ -219,7 +215,7 @@
                                 <!-- Copyright Left -->
                                 <div class="copyright-left">Copyright &copy; 2021 <a href="https://homi.immo/" target="_blank" >HOMI</a>, Tous droits reservés.</div>
                                 <!-- Copyright Right -->
-                                <div class="copyright-right">Made with <i class="fas fa-heart"></i> By <a href="#">Theme Land</a></div>
+                                <!-- <div class="copyright-right">Made with <i class="fas fa-heart"></i> By <a href="#">Theme Land</a></div> -->
                             </div>
                         </div>
                     </div>
