--- a/index.html
+++ b/index.html
@@ -137,69 +137,54 @@
             <div class="footer-top ptb_100">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="col-12 col-sm-4 col-lg-4">
                             <!-- Footer Items -->
                             <div class="footer-items">
                                 <!-- Logo -->
                                 <a class="navbar-brand" href="#">
                                     <img class="logo" src="assets/img/logo/logo-homi.svg" alt="">
                                 </a>
-                                <p class="mt-2 mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis non, fugit totam vel laboriosam vitae.</p>
+                                <h3 class="footer-title mb-2">Retrouvez-nous sur :</h3>
                                 <!-- Social Icons -->
                                 <div class="social-icons d-flex">
                                     <a class="facebook" target="_blank" href="https://www.facebook.com/homi.immo/">
                                         <i class="fab fa-facebook-f"></i>
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
-                                    <a class="linkedin" href="https://www.linkedin.com/company/homi.immo/">
+                                    <a class="instagram" target="_blank" href="https://www.instagram.com/homi.immo/">
+                                        <i class="fab fa-instagram"></i>
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                    <a class="linkedin" target="_blank" href="https://www.linkedin.com/company/homi.immo/">
                                         <i class="fab fa-linkedin"></i>
                                         <i class="fab fa-linkedin"></i>
                                     </a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="col-12 col-sm-4 col-lg-4">
                             <!-- Footer Items -->
                             <div class="footer-items">
                                 <!-- Footer Title -->
-                                <h3 class="footer-title mb-2">Useful Links</h3>
+                                <h3 class="footer-title mb-2">Liens Utiles</h3>
                                 <ul>
-                                    <li class="py-2"><a href="#">Home</a></li>
-                                    <li class="py-2"><a href="#">About Us</a></li>
-                                    <li class="py-2"><a href="#">Services</a></li>
-                                    <li class="py-2"><a href="#">Blog</a></li>
-                                    <li class="py-2"><a href="#">Contact</a></li>
+                                    <li class="py-2"><a href="https://homi.immo/foire-aux-questions/">FAQ</a></li>
+                                    <li class="py-2"><a href="https://homi.immo/comment-ca-marche/">Comment ça marche ?</a></li>
+                                    <li class="py-2"><a href="https://homi.immo/nos-conseils/">Nos conseils</a></li>
+                                    <li class="py-2"><a href="https://homi.immo/">Site HOMI</a></li>
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="col-12 col-sm-4 col-lg-4">
                             <!-- Footer Items -->
                             <div class="footer-items">
                                 <!-- Footer Title -->
-                                <h3 class="footer-title mb-2">Product Help</h3>
+                                <h3 class="footer-title mb-2">Infos Légales</h3>
                                 <ul>
-                                    <li class="py-2"><a href="#">FAQ</a></li>
-                                    <li class="py-2"><a href="#">Privacy Policy</a></li>
-                                    <li class="py-2"><a href="#">Support</a></li>
-                                    <li class="py-2"><a href="#">Terms &amp; Conditions</a></li>
-                                    <li class="py-2"><a href="#">Contact</a></li>
+                                    <li class="py-2"><a href="https://homi.immo/mentions-legales/"> Mentions légales</a></li>
+                                    <li class="py-2"><a href="https://homi.immo/donnees-personnelles/">Politique de confidentialité</a></li>
+                                    <li class="py-2"><a href="https://homi.immo/contact/">Contact</a></li>
                                 </ul>
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6 col-lg-3">
-                            <!-- Footer Items -->
-                            <div class="footer-items">
-                                <!-- Footer Title -->
-                                <h3 class="footer-title mb-2">Download</h3>
-                                <!-- Store Buttons -->
-                                <div class="button-group store-buttons store-black d-flex flex-wrap">
-                                    <a href="#">
-                                        <img src="assets/img/icon/google-play-black.png" alt="">
-                                    </a>
-                                    <a href="#">
-                                        <img src="assets/img/icon/app-store-black.png" alt="">
-                                    </a>
-                                </div>
                             </div>
                         </div>
                     </div>
