fixing some missing links issues && deleting unused assets

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                     <div class="col-12">
                                         <button class="btn btn-bordered w-100 mt-3 mt-sm-4" type="submit">Je m'inscris maintenant</button>
                                         <div class="contact-bottom">
-                                            <span class="d-inline-block mt-3">En t'inscrivant, tu acceptes nos <a href="#">CGU</a> &amp; notre <a href="#">politique de confidentialité</a></span>
+                                            <span class="d-inline-block mt-3">En t'inscrivant, tu acceptes <a href="https://homi.immo/mentions-legales/">CGU</a> &amp; notre <a href="https://homi.immo/donnees-personnelles/">politique de confidentialité</a></span>
                                         </div>
                                     </div>
                                 </div>
