--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class="navbar navbar-sticky navbar-expand-lg navbar-dark">
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
-                    <img class="navbar-brand-regular" style=" width: 130px;" src="assets/img/logo/logo-homi-white.png" alt="brand-logo">
+                    <img class="navbar-brand-regular" style=" width: 130px;" src="assets/img/logo/logo-homi-white-t.png" alt="brand-logo">
                     <img class="navbar-brand-sticky" style=" width: 130px;" src="assets/img/logo/logo-homi.png" alt="sticky brand-logo">
                 </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
                     <nav>
                         <ul class="navbar-nav" id="navbar-nav">
                             <li class="nav-item">
-                                <a href="https://homi.immo/" class="btn sApp-btn text-uppercase" target="_blank">Voir le site</a>
+                                <a href="https://homi.immo/" class="btn cta-btn text-uppercase" target="_blank">Voir le site</a>
                             </li>
                         </ul>
                     </nav>
@@ -68,7 +68,7 @@
                             <p class="text-white my-4">Remplis le formulaire et découvre comment gagner un minimum de <strong style="color: #111;">400€</strong> grâce à HOMI.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
-                                <a target="_blank" href="https://homi.immo/comment-ca-marche/" class="btn sApp-btn text-uppercase">Je découvre</a>
+                                <a target="_blank" href="https://homi.immo/comment-ca-marche/" class="btn cta-btn text-uppercase">Je découvre</a>
                             </div>
                         </div>
                     </div>
