fixing some ui issues

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <header class="navbar navbar-sticky navbar-expand-lg navbar-dark">
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
-                    <img class="navbar-brand-regular" style=" width: 130px;" src="assets/img/logo/logo-homi-white-t.png" alt="brand-logo">
-                    <img class="navbar-brand-sticky" style=" width: 130px;" src="assets/img/logo/logo-homi.png" alt="sticky brand-logo">
+                    <img class="navbar-brand-regular" style="margin-left: 15px; width: 120px;" src="assets/img/logo/logo-homi-white-t.png" alt="brand-logo">
+                    <img class="navbar-brand-sticky" style="margin-left: 15px; width: 120px;" src="assets/img/logo/logo-homi.png" alt="sticky brand-logo">
                 </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
+                <div class="container">
                     <img class="join-us" src="assets/img/bg/join-our-community.jpg" alt="">
                 </div>
             </div>
