--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header class="navbar navbar-sticky navbar-expand-lg navbar-dark">
             <div class="container position-relative">
                 <a class="navbar-brand" href="index.html">
-                    <img class="navbar-brand-regular" style="margin-left: 15px; width: 120px;" src="assets/img/logo/logo-homi-white.png" alt="brand-logo">
+                    <img class="navbar-brand-regular" style="margin-left: 15px; width: 120px;" src="assets/img/logo/logo-homi-white-t.png" alt="brand-logo">
                     <img class="navbar-brand-sticky" style="margin-left: 15px; width: 120px;" src="assets/img/logo/logo-homi.png" alt="sticky brand-logo">
                 </a>
                 <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
@@ -64,8 +64,8 @@
                     <!-- Welcome Intro Start -->
                     <div class="col-12 col-lg-7">
                         <div class="welcome-intro">
-                            <h1 class="text-white" style="font-size: 3em;">Ta curiosité vaut de l'or ! Des biens à vendre autour de chez toi ?</h1>
-                            <p class="text-white my-4">Remplis le formulaire et découvre comment gagner un minimum de <strong style="color: #D98C18;">400€</strong> grâce à HOMI.</p>
+                            <h1 class="text-white" style="font-size: 2.5em;">Ta curiosité vaut de l'or ! <br> Des biens à vendre autour de chez toi ?</h1>
+                            <p class="text-white my-4" style="font-size: 1.2em;">Remplis le formulaire et découvre comment gagner à partir de <strong style="color: #D98C18; cursor: pointer;">400€</strong> grâce à HOMI.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
                                 <a target="_blank" href="https://homi.immo/comment-ca-marche/" class="btn cta-btn text-uppercase">Je découvre</a>
