add How It Work section

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                     <!-- Welcome Intro Start -->
                     <div class="col-12 col-lg-7">
                         <div class="welcome-intro">
-                            <h1 class="text-white" style="font-size: 2.5em;">Ta curiosité vaut de l'or ! <br> Des biens à vendre autour de chez toi ?</h1>
-                            <p class="text-white my-4" style="font-size: 1.2em;">Remplis le formulaire et découvre comment gagner à partir de <strong style="color: #D98C18; cursor: pointer;">400€</strong> grâce à HOMI.</p>
+                            <h1 class="text-white" style="font-size: 2.5em;">Ta curiosité vaut de l'or... <br> Les biens à vendre près de chez toi aussi !</h1>
+                            <p class="text-white my-4" style="font-size: 1.2em;">Remplis le formulaire et découvre comment gagner <strong style="color: #D98C18; cursor: pointer;">à partir de 400€</strong> grâce à HOMI.</p>
                             <!-- Store Buttons -->
                             <div class="button-group store-buttons d-flex">
                                 <a target="_blank" href="https://homi.immo/comment-ca-marche/" class="btn cta-btn text-uppercase">Je découvre</a>
@@ -108,6 +108,79 @@
             </div>
         </section>
         <!-- ***** Welcome Area End ***** -->
+
+
+        <section class="section service-area overflow-hidden ptb_100">
+            <div class="container">
+                <div class="row justify-content-between">
+                    <div class="col-12 col-lg-6 order-2 order-lg-1">
+                        <!-- Service Text -->
+                        <div class="service-text pt-4 pt-lg-0">
+                            <h2 class="mb-4">HOMI, comment ça marche ?</h2>
+                            <!-- Service List -->
+                            <ul class="service-list">
+                                <!-- Single Service -->
+                                <li class="single-service media py-2">
+                                    <div class="service-icon pr-4">
+                                        <span><svg class="svg-inline--fa fa-buffer fa-w-14" aria-hidden="true"
+                                                focusable="false" data-prefix="fab" data-icon="buffer" role="img"
+                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                                                data-fa-i2svg="">
+                                                <path fill="currentColor"
+                                                    d="M427.84 380.67l-196.5 97.82a18.6 18.6 0 0 1-14.67 0L20.16 380.67c-4-2-4-5.28 0-7.29L67.22 350a18.65 18.65 0 0 1 14.69 0l134.76 67a18.51 18.51 0 0 0 14.67 0l134.76-67a18.62 18.62 0 0 1 14.68 0l47.06 23.43c4.05 1.96 4.05 5.24 0 7.24zm0-136.53l-47.06-23.43a18.62 18.62 0 0 0-14.68 0l-134.76 67.08a18.68 18.68 0 0 1-14.67 0L81.91 220.71a18.65 18.65 0 0 0-14.69 0l-47.06 23.43c-4 2-4 5.29 0 7.31l196.51 97.8a18.6 18.6 0 0 0 14.67 0l196.5-97.8c4.05-2.02 4.05-5.3 0-7.31zM20.16 130.42l196.5 90.29a20.08 20.08 0 0 0 14.67 0l196.51-90.29c4-1.86 4-4.89 0-6.74L231.33 33.4a19.88 19.88 0 0 0-14.67 0l-196.5 90.28c-4.05 1.85-4.05 4.88 0 6.74z">
+                                                </path>
+                                            </svg><!-- <i class="fab fa-buffer"></i> --></span>
+                                    </div>
+                                    <div class="service-text media-body">
+                                        <p>Récoltez des informations sur le bien à vendre</p>
+                                    </div>
+                                </li>
+                                <!-- Single Service -->
+                                <li class="single-service media py-2">
+                                    <div class="service-icon pr-4">
+                                        <span><svg class="svg-inline--fa fa-brush fa-w-12" aria-hidden="true"
+                                                focusable="false" data-prefix="fas" data-icon="brush" role="img"
+                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
+                                                data-fa-i2svg="">
+                                                <path fill="currentColor"
+                                                    d="M352 0H32C14.33 0 0 14.33 0 32v224h384V32c0-17.67-14.33-32-32-32zM0 320c0 35.35 28.66 64 64 64h64v64c0 35.35 28.66 64 64 64s64-28.65 64-64v-64h64c35.34 0 64-28.65 64-64v-32H0v32zm192 104c13.25 0 24 10.74 24 24 0 13.25-10.75 24-24 24s-24-10.75-24-24c0-13.26 10.75-24 24-24z">
+                                                </path>
+                                            </svg><!-- <i class="fas fa-brush"></i> --></span>
+                                    </div>
+                                    <div class="service-text media-body">
+                                        <p>Partagez les en quelques clics</p>
+                                    </div>
+                                </li>
+                                <!-- Single Service -->
+                                <li class="single-service media py-2">
+                                    <div class="service-icon pr-4">
+                                        <span><svg class="svg-inline--fa fa-burn fa-w-12" aria-hidden="true"
+                                                focusable="false" data-prefix="fas" data-icon="burn" role="img"
+                                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
+                                                data-fa-i2svg="">
+                                                <path fill="currentColor"
+                                                    d="M192 0C79.7 101.3 0 220.9 0 300.5 0 425 79 512 192 512s192-87 192-211.5c0-79.9-80.2-199.6-192-300.5zm0 448c-56.5 0-96-39-96-94.8 0-13.5 4.6-61.5 96-161.2 91.4 99.7 96 147.7 96 161.2 0 55.8-39.5 94.8-96 94.8z">
+                                                </path>
+                                            </svg><!-- <i class="fas fa-burn"></i> --></span>
+                                    </div>
+                                    <div class="service-text media-body">
+                                        <p>Percevez une rémunération à la hauteur de votre engagement</p>
+                                    </div>
+                                </li>
+                                <!-- Single Service -->
+                            </ul>
+                            <a href="https://homi.immo/comment-ca-marche/" target="_blank" class="btn btn-bordered mt-4">En savoir plus</a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 order-1 order-lg-2 d-none d-lg-block">
+                        <!-- Service Thumb -->
+                        <div class="service-thumb mx-auto">
+                            <img src="assets/img/illustrations/thumb2.png" alt="" style="width: 100%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- ***** Team Area Start ***** -->
         <section class="section team-area team-style-two overflow-hidden ptb_100">
