little UI updates

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                             </svg><!-- <i class="fab fa-buffer"></i> --></span>
                                     </div>
                                     <div class="service-text media-body">
-                                        <p>Récoltez des informations sur le bien à vendre</p>
+                                        <p>Récolte des informations sur le bien à vendre</p>
                                     </div>
                                 </li>
                                 <!-- Single Service -->
@@ -148,7 +148,7 @@
                                             </svg><!-- <i class="fas fa-brush"></i> --></span>
                                     </div>
                                     <div class="service-text media-body">
-                                        <p>Partagez les en quelques clics</p>
+                                        <p>Partage les en quelques clics</p>
                                     </div>
                                 </li>
                                 <!-- Single Service -->
@@ -164,7 +164,7 @@
                                             </svg><!-- <i class="fas fa-burn"></i> --></span>
                                     </div>
                                     <div class="service-text media-body">
-                                        <p>Percevez une rémunération à la hauteur de votre engagement</p>
+                                        <p>Perçois une rémunération à la hauteur de votre engagement</p>
                                     </div>
                                 </li>
                                 <!-- Single Service -->
