little UI updates

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                             </svg><!-- <i class="fas fa-burn"></i> --></span>
                                     </div>
                                     <div class="service-text media-body">
-                                        <p>Perçois une rémunération à la hauteur de votre engagement</p>
+                                        <p>Perçois une rémunération à la hauteur de ton engagement</p>
                                     </div>
                                 </li>
                                 <!-- Single Service -->
