--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
                     <img class="navbar-brand-regular" style="margin-left: 15px; width: 120px;" src="assets/img/logo/logo-homi-white-t.png" alt="brand-logo">
                     <img class="navbar-brand-sticky" style="margin-left: 15px; width: 120px;" src="assets/img/logo/logo-homi.png" alt="sticky brand-logo">
                 </a>
-                <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
+                <!-- <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button> -->
 
                 <div class="navbar-inner">
                     <!--  Mobile Menu Toggler -->
                     <button class="navbar-toggler d-lg-none" type="button" data-toggle="navbarToggler" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <nav>
+                    <!-- <nav>
                         <ul class="navbar-nav" id="navbar-nav">
                             <li class="nav-item">
                                 <a href="https://homi.immo/" class="btn cta-btn text-uppercase" target="_blank">Voir le site</a>
                             </li>
                         </ul>
-                    </nav>
+                    </nav> -->
                 </div>
             </div>
         </header>
@@ -84,10 +84,10 @@
                                 <div class="row">
                                     <div class="col-12">
                                         <div class="form-group">
-                                            <input type="text" class="form-control" name="name" placeholder="Nom" required="required">
+                                            <input type="text" class="form-control" name="surname" placeholder="Prénom" required="required">
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" class="form-control" name="surname" placeholder="Prénom" required="required">
+                                            <input type="text" class="form-control" name="name" placeholder="Nom" required="required">
                                         </div>
                                         <div class="form-group">
                                             <input type="email" class="form-control" name="email" placeholder="Email" required="required">
