adding cookies consent div

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="col-12 col-md-8 col-lg-5">
                         <!-- Contact Box -->
-                        <div class="contact-box bg-white text-center rounded p-4 p-sm-5 mt-5 mt-lg-0 shadow-lg">
+                        <div class="contact-box bg-white text-center rounded p-4 p-sm-5 mt-5 mt-lg-0 mb-4 shadow-lg">
                             <!-- Contact Form -->
                             <form id="contact-form">
                                 <div class="contact-top">
@@ -281,7 +281,19 @@
             </div>
         </footer>
         <!--====== Footer Area End ======-->
-    </div>
+
+        <div class="cookie-popup cookie-popup--short cookie-popup--dark">
+
+            <div>
+                Ce site utilise uniquement des cookies nécessaires à son bon fonctionnement et de mesure d'audience. En cliquant sur "J'ai compris" ou en poursuivant votre navigation, vous reconnaissez en être informé. Pour en savoir plus, cliquez ici. 
+                <a href="https://google.com">En savoir plus</a>
+            </div>
+            <div class="cookie-popup-actions">
+                <button>J'ai compris !</button>
+            </div>
+
+        </div>
+</div>
 
 
     <!-- ***** All jQuery Plugins ***** -->
