cookies consent texts update

--- a/index.html
+++ b/index.html
@@ -285,8 +285,8 @@
         <div class="cookie-popup cookie-popup--short cookie-popup--dark">
 
             <div>
-                Ce site utilise uniquement des cookies nécessaires à son bon fonctionnement et de mesure d'audience. En cliquant sur "J'ai compris" ou en poursuivant votre navigation, vous reconnaissez en être informé. Pour en savoir plus, cliquez ici. 
-                <a href="https://google.com">En savoir plus</a>
+                Ce site utilise uniquement des cookies nécessaires à son bon fonctionnement et à la mesure d'audience. En cliquant sur "J'ai compris" ou en poursuivant ta navigation, tu reconnais en être informé. Pour en savoir plus, clique ici : 
+                <a href="https://homi.immo/donnees-personnelles">En savoir plus</a>
             </div>
             <div class="cookie-popup-actions">
                 <button>J'ai compris !</button>
